Removed leftover CSS fragments

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
     <!-- Navigation -->
     <nav>
       <div class="container">
-        --stone-charcoal: #1a252f;
-        --stone-river: #5d6d7e;
-        --stone-sand: #bdc3c7;
+        <div class="logo">
+          <img src="Artboard 1-20.JPEG" alt="Fifth Stone Dev Logo" loading="eager" width="125" height="125" />
+        </div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
         --stone-light: #ecf0f1;
         --accent-bronze: #b8956a;
         --accent-copper: #cd7f32;
