Removed additional CSS fragments

--- a/index.html
+++ b/index.html
@@ -104,10 +104,18 @@
         </div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-        --stone-light: #ecf0f1;
-        --accent-bronze: #b8956a;
-        --accent-copper: #cd7f32;
-        --accent-sage: #7d9d8e;
+          <li><a href="#developer">The Developer</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#why">Why Us</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero-content">
         --white: #ffffff;
         --off-white: #f8f9fa;
       }
