Updated mobile response. Hide hero image on mobile and center developer image

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
     <nav>
       <div class="container">
         <div class="logo">
-          <img src="assets/Artboard 1-20.JPEG" alt="Fifth Stone Dev Logo" loading="eager" width="125" height="125" />
+          <a href="#top">
+            <img src="assets/Artboard 1-20.JPEG" alt="Fifth Stone Dev Logo" loading="eager" width="125" height="125" />
+          </a>
         </div>
         <button class="mobile-menu-toggle" aria-label="Toggle menu">
           <span></span>
