--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   </head>
   <body>
     <!-- Navigation -->
@@ -143,7 +146,7 @@
         <div class="logo">
           <a href="#top">
             <img
-              src="assets/Artboard 1-20.JPEG"
+              src="assets/fifth_stone_logo.JPEG"
               alt="Fifth Stone Dev Logo"
               loading="eager"
               width="125"
@@ -246,12 +249,21 @@
               to every project I build.
             </p>
             <p>
-              Based in <strong>Cedar Falls, Iowa</strong>, I've spent years
-              helping businesses, nonprofits, and organizations turn their ideas
-              into functional, beautiful digital solutions. Whether it's
-              building a website from scratch, automating tedious processes, or
+              I've spent the last few years working with an enterprise level
+              SaaS product, where I analyzed complex workflows, built internal
+              tools that streamlined operations, and shaped processes within the
+              software support team. That experience gave me invaluable insight
+              into how businesses really work, what makes tools effective, and
+              how to solve problems systematically. In 2020, I dove deeper into
+              development — and I've been coding and building ever since.
+            </p>
+            <p>
+              Based in <strong>Cedar Falls, Iowa</strong>, I help businesses,
+              nonprofits, and organizations turn their ideas into functional,
+              beautiful digital solutions. Whether it's building a website from
+              scratch, automating tedious processes, developing custom tools, or
               providing strategic consulting, I'm passionate about creating
-              tools that serve a purpose.
+              technology that serves a real purpose.
             </p>
             <p>
               My approach is simple:
@@ -265,25 +277,12 @@
           </div>
         </div>
 
-        <div class="developer-highlights">
-          <div class="highlight-item">
-            <h4>🎓 Background</h4>
-            <p>
-              Combines technical expertise with real-world business
-              understanding
-            </p>
-          </div>
-          <div class="highlight-item">
-            <h4>💼 Experience</h4>
-            <p>
-              Worked with startups, established businesses, churches, and
-              nonprofits
-            </p>
-          </div>
-          <div class="highlight-item">
-            <h4>🛠️ Approach</h4>
-            <p>Clean code, clear communication, and solutions built to last</p>
-          </div>
+        <div class="developer-points">
+          <ul class="custom-list">
+            <li>5+ years of dedicated development experience with modern frameworks and technologies</li>
+            <li>Proven track record in enterprise-level workflow optimization and internal tooling</li>
+            <li>Committed to building long-term partnerships and delivering solutions that truly serve your mission</li>
+          </ul>
         </div>
       </div>
     </section>
@@ -442,11 +441,9 @@
         </div>
 
         <div style="margin-top: 3rem">
-          <a
-            href="/cdn-cgi/l/email-protection#5f373a3333301f3936392b372c2b30313a3b3a29713c3032"
-            class="btn btn-primary"
-            >Send Us A Message</a
-          >
+          <button class="btn btn-primary" onclick="openModal('contactModal')">
+            Send Us A Message
+          </button>
         </div>
       </div>
     </section>
@@ -454,7 +451,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <p>&copy; 2026 Fifth Stone Development LLC. All rights reserved.</p>
+        <p>&copy; 2026 Fifth Stone Dev LLC. All rights reserved.</p>
         <div class="footer-logo">Fifth Stone Dev</div>
         <p class="footer-tagline">Built with purpose.</p>
       </div>
@@ -668,6 +665,69 @@
             ></textarea>
           </div>
           <button type="submit" class="btn-submit">Submit Request</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- General Contact Modal -->
+    <div id="contactModal" class="modal">
+      <div class="modal-content">
+        <button class="modal-close" onclick="closeModal('contactModal')">
+          &times;
+        </button>
+        <h2>Get In Touch</h2>
+        <p>
+          We'd love to hear about your project. Fill out the form below and
+          we'll get back to you within 24 hours.
+        </p>
+        <form onsubmit="handleFormSubmit(event, 'contactModal')">
+          <div class="form-group">
+            <label for="contact-name">Name *</label>
+            <input type="text" id="contact-name" name="name" required />
+          </div>
+          <div class="form-group">
+            <label for="contact-email">Email *</label>
+            <input type="email" id="contact-email" name="email" required />
+          </div>
+          <div class="form-group">
+            <label for="contact-phone">Phone</label>
+            <input type="tel" id="contact-phone" name="phone" />
+          </div>
+          <div class="form-group">
+            <label for="contact-company">Company/Organization</label>
+            <input type="text" id="contact-company" name="company" />
+          </div>
+          <div class="form-group">
+            <label for="contact-interest">I'm Interested In *</label>
+            <select id="contact-interest" name="interest" required>
+              <option value="">Select an option</option>
+              <option value="web-development">Web Development</option>
+              <option value="process-automation">Process Automation</option>
+              <option value="consulting">Strategic Consulting</option>
+              <option value="general-inquiry">General Inquiry</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="contact-message">Message *</label>
+            <textarea
+              id="contact-message"
+              name="message"
+              required
+              rows="6"
+              placeholder="Tell us about your project or what you need help with..."
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <label for="contact-timeline">Desired Timeline</label>
+            <input
+              type="text"
+              id="contact-timeline"
+              name="timeline"
+              placeholder="e.g., ASAP, 1-3 months, flexible"
+            />
+          </div>
+          <button type="submit" class="btn-submit">Send Message</button>
         </form>
       </div>
     </div>
