Updated developer photo

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="developer-main">
           <div class="developer-image-placeholder">
             <img
-              src="assets/professional.jpg"
+              src="assets/professional_stone_slate.jpg"
               alt="Phil Harberts"
               class="developer-photo"
             />
