--- a/index.html
+++ b/index.html
@@ -252,10 +252,7 @@
               I've spent the last few years working with an enterprise level
               SaaS product, where I analyzed complex workflows, built internal
               tools that streamlined operations, and shaped processes within the
-              software support team. That experience gave me invaluable insight
-              into how businesses really work, what makes tools effective, and
-              how to solve problems systematically. In 2020, I dove deeper into
-              development — and I've been coding and building ever since.
+              software support team. That experience taught me to see software from the user's perspective — understanding what makes tools truly useful, where processes break down, and how to build solutions that people will actually want to use.
             </p>
             <p>
               Based in <strong>Cedar Falls, Iowa</strong>, I help businesses,
