Updated contact section with hours of operation

--- a/index.html
+++ b/index.html
@@ -417,17 +417,8 @@
             <div class="contact-item-value">Cedar Falls, Iowa</div>
           </div>
           <div class="contact-item">
-            <div class="contact-item-label">Email</div>
-            <div class="contact-item-value">
-              <a
-                href="/cdn-cgi/l/email-protection#5139343d3d3e11373837253922253e3f343534277f323e3c"
-                ><span
-                  class="__cf_email__"
-                  data-cfemail="d1b9b4bdbdbe91b7b8b7a5b9a2a5bebfb4b5b4a7ffb2bebc"
-                  >fifthstonedev@outlook.com</span
-                ></a
-              >
-            </div>
+            <div class="contact-item-label">Hours</div>
+            <div class="contact-item-value">Monday - Friday<br /> 8am - 5pm CST</div>
           </div>
           <div class="contact-item">
             <div class="contact-item-label">Phone</div>
