Updated navigation logo and OG image meta tags

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
-      content="https://fifthstonedev.com/og-image.jpg"
+      content="https://fifthstonedev.com/assets/Logo%20with%20Overflow.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -55,7 +55,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://fifthstonedev.com/og-image.jpg"
+      content="https://fifthstonedev.com/assets/Logo%20with%20Overflow.png"
     />
     <meta
       name="twitter:image:alt"
@@ -87,7 +87,7 @@
         "name": "Fifth Stone Dev LLC",
         "alternateName": "Fifth Stone Dev",
         "url": "https://fifthstonedev.com",
-        "logo": "https://fifthstonedev.com/logo.png",
+        "logo": "https://fifthstonedev.com/assets/fifth_stone_logo.JPEG",
         "description": "Professional web development and process automation services for businesses seeking digital transformation.",
         "address": {
           "@type": "PostalAddress",
@@ -146,7 +146,7 @@
         <div class="logo">
           <a href="#top">
             <img
-              src="assets/fifth_stone_logo.JPEG"
+              src="assets/Horz Logo.png"
               alt="Fifth Stone Dev Logo"
               loading="eager"
               width="125"
