--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:image"
-      content="https://fifthstonedev.com/assets/Logo%20with%20Overflow.png"
+      content="https://fifthstonedev.com/assets/logo-with-overflow.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -55,7 +55,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://fifthstonedev.com/assets/Logo%20with%20Overflow.png"
+      content="https://fifthstonedev.com/assets/logo-with-overflow.png"
     />
     <meta
       name="twitter:image:alt"
@@ -146,7 +146,7 @@
         <div class="logo">
           <a href="#top">
             <img
-              src="assets/Horz Logo.png"
+              src="assets/horz-logo.png"
               alt="Fifth Stone Dev Logo"
               loading="eager"
               width="125"
