Added Microsoft Clarity script

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta name="revisit-after" content="7 days" />
 
     <!-- Open Graph Meta Tags -->
+    <!-- Optional: Add fb:app_id for Facebook Insights -->
+    <!-- <meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID" /> -->
     <meta
       property="og:title"
       content="Fifth Stone Dev | Web Development & Process Automation"
@@ -121,6 +123,15 @@
           "name": "United States"
         }
       }
+    </script>
+
+    <!--- Microsoft Clarity Analytics -->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "uyvg6201g1");
     </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
