--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <div class="section-label">Meet the Developer</div>
             <h2>Phil Harberts</h2>
             <p>
-              Hi, I'm Phil — the founder and lead developer at
+              Hi, I'm Phil — the founder and developer at
               <strong>Fifth Stone Dev</strong>. With a background in both
               technology and mission-driven work, I bring a unique perspective
               to every project I build.
