updated logo file name to include png

--- a/StepsToSerenityStarter/index.html
+++ b/StepsToSerenityStarter/index.html
@@ -311,7 +311,7 @@
     >
       <div class="flex items-center gap-4">
         <img
-          src="assets/Color+logo+with+no+background"
+          src="assets/Color+logo+with+no+background.png"
           alt="Steps to Serenity Counseling"
           style="height: 80px; width: auto"
         />
