Updated footer logo and added basic package demo

--- a/StepsToSerenityStarter/index.html
+++ b/StepsToSerenityStarter/index.html
@@ -1022,7 +1022,7 @@
     <footer class="border-t border-border px-12 py-12 text-center bg-card">
       <div class="flex items-center justify-center gap-3 mb-4">
         <img
-          src="assets/Color+logo+with+no+background"
+          src="assets/Color+logo+with+no+background.png"
           alt="Steps to Serenity Counseling"
           class="h-10 w-auto"
         />
