--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   </head>
   <body>
     <!-- Cookie Consent Banner -->
-    <div id="cookie-consent-banner" class="cookie-banner" role="dialog" aria-labelledby="cookie-title" aria-describedby="cookie-description" aria-modal="true">
+    <div id="cookie-consent-banner" class="cookie-banner" role="dialog" aria-labelledby="cookie-title" aria-describedby="cookie-description" aria-modal="true" style="position:fixed;bottom:0;left:0;right:0;top:auto;z-index:10000;">
       <div class="cookie-content">
         <div class="cookie-text">
           <h3 id="cookie-title">🍪 We value your privacy</h3>
