Add Privacy Policy page with language translation dropdown

--- a/index.html
+++ b/index.html
@@ -250,9 +250,10 @@
           <h3 id="cookie-title">🍪 We value your privacy</h3>
           <p id="cookie-description">
             We use cookies to enhance your browsing experience and analyze site traffic. 
-            This includes Microsoft Clarity for user behavior insights and Google Analytics for site performance.
             By clicking "Accept All", you consent to our use of cookies.
-          </p>
+            For more information about how we use this data, please review
+              <a href="/privacy-policy.html" class="cookie-privacy-link" style="color: white;">View our Privacy Policy</a>.
+            </p>
         </div>
         <div class="cookie-buttons">
           <button id="cookie-accept" class="cookie-btn cookie-accept" aria-label="Accept all cookies">Accept All</button>
