Added privacy policy link to the footer

--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
         <p>&copy; 2026 Fifth Stone Dev LLC. All rights reserved.</p>
         <div class="footer-logo">Fifth Stone Dev</div>
         <p class="footer-tagline">Built with purpose.</p>
+        <p><a href="/privacy-policy.html" style="color: var(--stone-sand); text-decoration: none;">Privacy Policy</a></p>
       </div>
     </footer>
 
