UI/UX improvements and accessibility color contrast fix
Accessibility:
- Fix color contrast for section labels (ABOUT US, etc.) - changed to #8b6914 for WCAG AA compliance (5.5:1 contrast ratio)

Style Updates:
- Update btn-primary and btn-secondary hover colors to stone-slate blue (matching View Case Study buttons)
- Remove hover color change from portfolio project tags
- Remove border from View Case Study buttons for cleaner appearance

Performance:
- Replace horz-logo.png with horizontal_logo_webp.webp for better compression

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         <div class="logo">
           <a href="#top" aria-label="Fifth Stone Dev - Return to top of page">
             <img
-              src="assets/horz-logo.png"
+              src="assets/horizontal_logo_webp.webp"
               alt="Fifth Stone Dev Logo"
               loading="eager"
               width="125"
@@ -1082,7 +1082,7 @@
         </button>
 
         <h2 id="govDataProcessingTitle">Government Agency Data Processing & Analysis Tool</h2>
-        <div class="case-study-category">Process Automation & Data Engineering</div>
+        <div class="case-study-category">Process Automation</div>
         <button class="case-study-website-link" onclick="openToolImage('govToolImage')" aria-label="View screenshot of the Government Data Processing Tool">View Tool</button>
         
         <div id="govToolImage" class="tool-image-container" style="display: none;">
